session_9/task8_3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mystery
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8080
